@@ -13,10 +13,6 @@ randbuffer
 refcount
 syslogbuf
 typetrait
-wrap1 
-wrap1c 
-wrap2 
-wrap2c 
 x2a
     autoptr
     fnwrap1 
