@@ -1,4 +1,4 @@
-// #define STATIC
+//#define STATIC
     // When compiling Bobcat for CYGWIN under Windows, activate the above
     // #define: it will prevent the construction of the shared library (until
     // somebody tells me how to do that under CYGWIN....)
