@@ -1,6 +1,7 @@
 #ifndef _INCLUDED_BOBCAT_CMDFINDERBASE_
 #define _INCLUDED_BOBCAT_CMDFINDERBASE_
 
+#include <strings.h>
 #include <string>
 
 namespace FBB
