@@ -1,6 +1,9 @@
 #include "datetime"
 
 #include <ostream>
+#include <sstream>
+#include <iomanip>
+
 #include <bobcat/errno>
 
 using namespace std;
