@@ -2,6 +2,7 @@
 
 #include "errno"
 
+#include <string.h>
 #include <errno.h>
 
 using namespace std;
