@@ -1,5 +1,6 @@
 #include "ifdstreambuf"
 
+#include <string.h>
 #include <unistd.h>
 
 using namespace FBB;
