@@ -2,6 +2,7 @@
 #define _INCLUDED_BOBCAT_REFCOUNT_
 
 #include <iostream>
+#include <typeinfo>
 
 namespace FBB
 {
