@@ -1,6 +1,7 @@
 #ifndef _INCLUDED_BOBCAT_STRING_
 #define _INCLUDED_BOBCAT_STRING_
 
+#include <strings.h>
 #include <string>
 #include <vector>
 #include <cctype>
