@@ -1,5 +1,6 @@
 #include "string"
 
+#include <string.h>
 #include <cctype>
 #include <iosfwd>
 #include <algorithm>
