@@ -1,5 +1,6 @@
 #include "syslogstream"
 
+#include <string.h>
 #include <errno.h>
 
 using namespace std;
