@@ -1,9 +1,19 @@
-bobcat (1.17.1) (TO BE INSTALLED)
+bobcat (1.17.1)
 
   * Removed Wrap* wrappers from Bisonc++. Use FnWrap* instead.
 
+  * Added member rfc2822() to DateTime returning the time according to
+    RFC 2822 (e.g., as displayed by the `date -R' command.
+
   * Partial construction and installation of the Bobcat library is now 
     supported via #defines in INSTALL.im
+
+  * Minor modifications to satify g++4-3's #include requirements
+
+  * TEMPORARILY suppressed the `deprecated header warning' resulting from
+    using ext/hash_map in bobcat/hash. The fix is a kludge: defining the
+    backaward warning include guard identifier just prior to including
+    ext/hash_map and by undefining it thereafter suppresses the warning.
 
 bobcat (1.17.0)
 
